edited datasetretreival.ipynb to from splits of the dataset for effcient training

--- a/Dataset/DatasetRetreival.ipynb
+++ b/Dataset/DatasetRetreival.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5b25e40e-8fb2-482f-8a22-0a4219964efc",
    "metadata": {},
    "outputs": [
@@ -171,6 +171,7 @@
    ],
    "source": [
     "from datasets import load_dataset\n",
+    "import scripts.prepare_dataset as prep\n",
     "\n",
     "# Login using e.g. `huggingface-cli login` to access this dataset\n",
     "ds = load_dataset(\"lmsys/lmsys-chat-1m\")"
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c004cb3a-7084-43c2-b9f3-a47ea06a12c9",
    "metadata": {},
    "outputs": [
@@ -223,7 +224,9 @@
    "id": "ec7c8011-15cd-4f00-8f2d-64476d25769a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prep.split_and_save_dataset()"
+   ]
   }
  ],
  "metadata": {
